<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBDBDB"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:contentDescription="@string/doctorimg"
        android:src="@drawable/dbk" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/turnplate_bg_left"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/caijimiaoshu"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <!--<FrameLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--&gt;-->
        <!--</FrameLayout>-->
            <com.example.bluetooth.feiyinrecord.CircleMenuLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/turnplate_bg_right">
                <RelativeLayout
                    android:id="@id/id_circle_menu_item_center"
                    android:layout_width="wrap_content"
                    android:background="@drawable/turnplate_inner_icon"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="104.0dip"
                        android:layout_height="104.0dip"
                        android:layout_centerInParent="true"
                        android:background="@drawable/turnplate_center_unlogin"/>
                </RelativeLayout>
            </com.example.bluetooth.feiyinrecord.CircleMenuLayout>


    </LinearLayout>

</LinearLayout>